--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
       - name: build source code
         run: |
           cd build
-          git clone --depth 1 https://github.com/moe-hacker/ruri.git
+          git clone --depth 1 https://github.com/George-Seven/ruri.git
           cd ruri
           cc -Wl,--gc-sections -static src/*.c src/easteregg/*.c -o ruri -lcap -lseccomp -lpthread
           cp ./ruri ../../
